--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,8 @@ span {
   letter-spacing: 0.02em;
   text-decoration: none;
   list-style-type: none;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navlinks.current::after{
@@ -189,8 +191,8 @@ span {
 
 .header-addres {
   
- display: flex;
- align-items: center;
+  display: flex;
+  align-items: center;
   
   font-family: var(--primary-font);
   color: var(--secandary-color);
@@ -200,7 +202,10 @@ span {
   letter-spacing: 0.02em;
   text-decoration: none;
   list-style-type: none;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .header-addres:hover,
 .header-addres:focus {
@@ -210,6 +215,8 @@ span {
 .icon-header{
   margin-right: 10px;
   fill: currentColor;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-header:hover ,
@@ -274,14 +281,15 @@ span {
   border-style: none;
   cursor: pointer;
 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) , box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
 }
 
 .hero-button:hover,
 .hero-button:focus {
-  background: #188ce8;
+  background-color: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
 }
 
 
@@ -377,6 +385,32 @@ margin-right: 30px;
 .what-we-do-item {
   text-decoration: none;
   list-style-type: none;
+
+  position: relative;
+}
+
+.wwd-image{
+}
+
+.wwd-image-text{
+font-family: var(--primary-font);
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #FFFFFF;
+padding-top: 27px;
+padding-bottom: 27px;
+
+
+width: 370px;
+height: 70px;
+background: rgba(47, 48, 58, 0.8);
+
+position: absolute;
+transform: translateY(-100%);
 }
 
 .ouer-team {
@@ -491,6 +525,8 @@ display: block;
   letter-spacing: 0.03em;
   text-decoration: none;
   list-style-type: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .footer-addres:hover,
 .footer-addres:focus {
@@ -510,6 +546,7 @@ display: block;
   letter-spacing: 0.03em;
   text-decoration: none;
   list-style-type: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .map:hover,
@@ -530,6 +567,8 @@ display: block;
   border-radius: 4px;
   border-style: none;
   cursor: pointer;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -537,10 +576,9 @@ display: block;
 .filters-button:hover,
 .filters-button:focus {
   color: var(--white-color);
-  background: var(--blue-color);
+  background-color: var(--blue-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
 }
 
 .li-img {
@@ -588,7 +626,7 @@ letter-spacing: 0.03em;
 color:var(--white-color);
 
 transform: translateY(100%);
-transition: transform 250ms linear;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -623,6 +661,8 @@ transition: transform 250ms linear;
   margin-right: 30px;
   margin-bottom: 30px;
 
+  transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 
@@ -649,6 +689,8 @@ margin-bottom: 50px;
 .filters-link{
   display: block;
   text-decoration: none;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .filters-link:hover ,
@@ -707,16 +749,19 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
     align-items: center;
     justify-content: center;
     color: #AFB1B8;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),  fill 2500ms cubic-bezier(0.4, 0, 0.2, 1) ;
+  }
+  .soc-links:hover,
+  .soc-links:focus {
+    background-color: var(--blue-color);
+    color: #FFFFFF;
   }
 
 .icon-soc{
   fill: currentColor;
 }
-.soc-links:hover,
-.soc-links:focus {
-  background-color: var(--blue-color);
-  color: #FFFFFF;
-}
+
 
 
 /* -------------------------------CLIENT! */
@@ -750,6 +795,7 @@ margin-bottom: 50px;
   border: 1px solid currentColor;
   border-radius: 4px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .client-icon{
@@ -793,9 +839,9 @@ margin-bottom: 20px;
   color: #ffffff;
   background: rgba(255, 255, 255, 0.1);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-.footer-icons {
-  fill: currentColor;
+
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .footer-icon-link:hover,
@@ -803,6 +849,13 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: var(--blue-color);
   color: #FFFFFF;
 }
+
+.footer-icons {
+  fill: currentColor;
+  
+}
+
+
 
 
 
@@ -846,7 +899,7 @@ display: flex;
 align-items: center;
 justify-content: center;
 
-  width: 30px;
+ width: 30px;
   height: 30px;
   background-color: transparent;
   border: 1px solid #AFB1B8;
@@ -858,6 +911,10 @@ justify-content: center;
   cursor: pointer;
 
   fill: currentColor;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  
   
 }
 
