--- a/css/styles.css
+++ b/css/styles.css
@@ -395,14 +395,10 @@ margin-right: 30px;
 .wwd-image-text{
 font-family: var(--primary-font);
 font-weight: 700;
-font-size: 14px;
 line-height: 1.14;
-text-align: center;
-letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #FFFFFF;
-padding-top: 27px;
-padding-bottom: 27px;
+
 
 
 width: 370px;
@@ -410,7 +406,10 @@ height: 70px;
 background: rgba(47, 48, 58, 0.8);
 
 position: absolute;
-transform: translateY(-100%);
+bottom: 0;
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
 .ouer-team {
@@ -601,8 +600,9 @@ display: block;
 
 }
 
-.filters-image-item:hover .filters-text{
 
+.filters-link:hover .filters-text ,
+.filters-link:focus .filters-text{
   transform: translateY(0);
 }
 
@@ -750,7 +750,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
     justify-content: center;
     color: #AFB1B8;
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),  fill 2500ms cubic-bezier(0.4, 0, 0.2, 1) ;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),  fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
   }
   .soc-links:hover,
   .soc-links:focus {
